--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -80,6 +80,7 @@
         <% end -%>
 
             <div class="row">
+
               <div class="col-md-8 ">
 
                 <%= yield %>
@@ -97,16 +98,33 @@
 
             <hr>
 
-            <div class="row">
-              <div class="col-md-4">
-                <%= link_to(image_tag("natp_logo_words_2.jpg"), "http://www.natptax.com/Pages/default.aspx") %>
-              </div>
-              <div class="col-md-4">
-                <%= link_to(image_tag("ata_logo.png"), "https://www.atanet.org/") %>
-              </div>
-              <div class="col-md-4">
-                <%= link_to(image_tag("aipb_logo.png"), "https://www.atanet.org/") %>
-              </div>
+            <div class="">
+
+                <div class="row">
+                  <div class="col-md-4">
+                    <%= link_to(image_tag("natp_logo_words_2.jpg"), "http://www.natptax.com/Pages/default.aspx") %>
+                  </div>
+                  <div class="col-md-4">
+                    <%= link_to(image_tag("ata_logo.png"), "https://www.atanet.org/") %>
+                  </div>
+                  <div class="col-md-4">
+                    <%= link_to(image_tag("aipb_logo.png"), "https://www.atanet.org/") %>
+                  </div>
+                </div>
+                <hr>
+                <div class="row">
+                  <div class="col-md-4">
+                    <%= link_to(image_tag('efile_logo.jpg'), "http://www.irs.gov/Filing/E-File-Options") %>
+                  </div>
+                  <div class="col-md-4">
+                    <%= link_to(image_tag("najit_logo.png"), "http://www.najit.org/") %>
+
+                  </div>
+                  <div class="col-md-4">
+                    <%= link_to(image_tag("better_business_bureau_logo.jpg"), "https://www.bbb.org/") %>
+                  </div>
+                </div>
+
             </div>
       </div>
 
