website first deployment

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -97,32 +97,34 @@
 
 
             <hr>
+            <div class="panel-heading">
             <h3 class="taxes-centered"><%= ApplicationHelper.send(ApplicationHelper.get_language_tag + "social") %></h3>
+              </div>
             <hr>
 
             <div class="row">
 
               <div class="col-md-3 taxes-spaced">
                 <a href="https://www.facebook.com/pages/48th-Street-Income-Tax-Service/153994068075540">
-                    <img src="assets/facebook.png" class="img-circle img-responsive taxes-centered-image">
+                    <img src="assets/facebook_flat.png" class="img-rounded img-responsive taxes-centered-image">
                 </a>
               </div>
 
               <div class="col-md-3 taxes-spaced">
                 <a href="https://plus.google.com/113009331922345317870">
-                    <img src="assets/gplus.png" class="img-circle img-responsive taxes-centered-image">
+                    <img src="assets/google_flat.png" class="img-rounded img-responsive taxes-centered-image">
                 </a>
               </div>
 
               <div class="col-md-3 taxes-spaced">
                 <a href="https://www.linkedin.com/pub/clemente-velasco/37/648/65">
-                    <img src="assets/linkedin.png" class="img-circle img-responsive taxes-centered-image">
+                    <img src="assets/linkedin_flat.png" class="img-rounded img-responsive taxes-centered-image">
                 </a>
               </div>
 
               <div class="col-md-3 taxes-spaced">
                 <a href="https://twitter.com/031574">
-                    <img src="assets/twitter.png" class="img-circle img-responsive taxes-centered-image">
+                    <img src="assets/twitter_flat.png" class="img-rounded img-responsive taxes-centered-image">
                 </a>
               </div>
               </div>
@@ -134,7 +136,10 @@
             <br>
 
             <hr>
-            <h3 class="taxes-centered"><%= ApplicationHelper.send(ApplicationHelper.get_language_tag + "members") %></h3>
+            <div class="panel-heading">
+              <h3 class="taxes-centered"><%= ApplicationHelper.send(ApplicationHelper.get_language_tag + "members") %></h3>
+            </div>
+
             <hr>
             <div class="">
 
