--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -183,7 +183,9 @@
 
             <hr>
 
-
+<footer class="taxes-centered-image taxes-centered">
+  &copyAll Copyrights Reserved.
+</footer>
 </div>
 </body>
 
