--- a/app/views/sidebar/_sidebar.html.erb
+++ b/app/views/sidebar/_sidebar.html.erb
@@ -8,7 +8,9 @@
 
   </div>
   <div class="sidebar-module">
-    <h4><%= SidebarHelper.send(ApplicationHelper.get_language_tag + "refund_status").html_safe %></h4>
+    <div class="panel-heading">
+        <h4><%= SidebarHelper.send(ApplicationHelper.get_language_tag + "refund_status").html_safe %></h4>
+    </div>
     <ol class="list-unstyled taxes-spaced">
       <li class="odd"><a href=<%=SidebarHelper.send(ApplicationHelper.get_language_tag + "federal_link")%> ><%= SidebarHelper.send(ApplicationHelper.get_language_tag + "federal").html_safe %></a></li>
       <li class="even"><a href="https://ndr-refundstatus.ne.gov/refundstatus/public/search.faces"><%= SidebarHelper.send(ApplicationHelper.get_language_tag + "nebraska").html_safe %></a></li>
@@ -79,7 +81,9 @@
 
 
   <div class="sidebar-module">
-    <h4><%= SidebarHelper.send(ApplicationHelper.get_language_tag + "irs_information").html_safe %></h4>
+    <div class="panel-heading">
+        <h4><%= SidebarHelper.send(ApplicationHelper.get_language_tag + "irs_information").html_safe %></h4>
+    </div>
     <ol class="list-unstyled taxes-spaced">
       <li><a href=<%=SidebarHelper.send(ApplicationHelper.get_language_tag + "irs_homepage_link")%>><%= SidebarHelper.send(ApplicationHelper.get_language_tag + "irs_homepage").html_safe %></a></li>
       <li><a href=<%=SidebarHelper.send(ApplicationHelper.get_language_tag + "irs_news_link")%>><%= SidebarHelper.send(ApplicationHelper.get_language_tag + "irs_news").html_safe %></a></li>
@@ -104,7 +108,9 @@
   </div>
 
   <div class="sidebar-module">
-    <h4><%= SidebarHelper.send(ApplicationHelper.get_language_tag + "iowa_information").html_safe %></h4>
+    <div class="panel-heading">
+        <h4><%= SidebarHelper.send(ApplicationHelper.get_language_tag + "iowa_information").html_safe %></h4>
+    </div>
     <ol class="list-unstyled taxes-spaced">
       <li><a href="https://tax.iowa.gov/"><%= SidebarHelper.send(ApplicationHelper.get_language_tag + "iowa_department_revenue").html_safe %></a></li>
       <li><a href="http://www.revenue.nebraska.gov/index.html"><%= SidebarHelper.send(ApplicationHelper.get_language_tag + "nebraska_department_revenue").html_safe %></a></li>
@@ -172,7 +178,9 @@
 
 
   <div class="sidebar-module">
-    <h4><%= SidebarHelper.send(ApplicationHelper.get_language_tag + "testimonials").html_safe %></h4>
+    <div class="panel-heading">
+        <h4><%= SidebarHelper.send(ApplicationHelper.get_language_tag + "testimonials").html_safe %></h4>
+    </div>
 
     <%= render 'sidebar/carousel_testimonials' %>
   </div>
