--- a/app/views/example_mailer/sample_email.html.erb
+++ b/app/views/example_mailer/sample_email.html.erb
@@ -4,9 +4,24 @@
   <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
 </head>
 <body>
-<h1>Hi </h1>
+<h3>Hi, this is a contact form! </h3>
 <p>
-  Sample mail sent using smtp.
+  Name:
+  <br>
+  <%= @name%>
+  <br>
+  Email:
+  <br>
+  <%= @email%>
+  <br>
+  Phone:
+  <br>
+  <%= @phone%>
+  <br>
+  Question:
+  <br>
+  <%= @question%>
+  <br>
 </p>
 </body>
 </html>
