--- a/app/views/contact_us/_contact_form.html.erb
+++ b/app/views/contact_us/_contact_form.html.erb
@@ -5,6 +5,37 @@
     <label for="email"><%= ContactUsHelper.send(ApplicationHelper.get_language_tag + "email_address").html_safe %></label>
     <input type="email" name='email' class="form-control" id="email">
   </div>
+
+  <div class="form-group">
+    <label for="name"><%= ContactUsHelper.send(ApplicationHelper.get_language_tag + "name").html_safe %></label>
+    <input type="text" name='name' class="form-control" id="name">
+  </div>
+
+  <div class="form-group">
+    <label for="phone"><%= ContactUsHelper.send(ApplicationHelper.get_language_tag + "phone").html_safe %></label>
+    <input type="text" class="form-control"  name='phone' id="phone">
+  </div>
+
+  <div class="form-group">
+    <label for="sel1"><%= ContactUsHelper.send(ApplicationHelper.get_language_tag + "form_of_contact").html_safe %></label>
+    <select class="form-control" name='contact_option' id="sel1">
+
+      <option value="1"><%= ContactUsHelper.send(ApplicationHelper.get_language_tag + "email_option") %></option>
+      <option value="2"><%= ContactUsHelper.send(ApplicationHelper.get_language_tag + "phone_option") %></option>
+      <option value="3"><%= ContactUsHelper.send(ApplicationHelper.get_language_tag + "email_or_phone_option") %></option>
+    </select>
+  </div>
+
+  <div class="checkbox">
+    <label><input name='prefer_spanish' type="checkbox"><%= ContactUsHelper.send(ApplicationHelper.get_language_tag + "prefer_spanish").html_safe %></label>
+  </div>
+
+
+  <div class="form-group">
+    <label for="question"><%= ContactUsHelper.send(ApplicationHelper.get_language_tag + "question").html_safe %></label>
+    <textarea name='question' class="form-control" rows="5" id="comment"></textarea>
+  </div>
+
   <button type="submit" class="btn btn-default"><%= ContactUsHelper.send(ApplicationHelper.get_language_tag + "submit").html_safe %></button>
 </form>
 
