--- a/app/views/example_mailer/sample_email.text.erb
+++ b/app/views/example_mailer/sample_email.text.erb
@@ -1,3 +1,14 @@
-Hi
 
-This is the text email
+Hi, this is a contact form!
+
+Name:
+<%= @name%>
+
+Email:
+<%= @email%>
+
+Phone:
+<%= @phone%>
+
+Question:
+<%= @question%>
