email contact form

--- a/app/views/example_mailer/sample_email.html.erb
+++ b/app/views/example_mailer/sample_email.html.erb
@@ -21,6 +21,16 @@
   <%= @phone%>
   <br>
   <br>
+  Language Preference:
+  <br>
+  <%= @prefer_spanish%>
+  <br>
+  <br>
+  Contact Preference:
+  <br>
+  <%= @contact_option%>
+  <br>
+  <br>
   Question:
   <br>
   <%= @question%>
