--- a/app/views/contact_us/_contact_form.html.erb
+++ b/app/views/contact_us/_contact_form.html.erb
@@ -1,18 +1,33 @@
 
 <form accept-charset="UTF-8" action="/contact_us_submit" method="post" role="form">
   <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
-  <div class="form-group">
-    <label for="email"><%= ContactUsHelper.send(ApplicationHelper.get_language_tag + "email_address").html_safe %></label>
-    <input type="email" name='email' class="form-control" id="email">
-  </div>
 
   <div class="form-group">
-    <label for="name"><%= ContactUsHelper.send(ApplicationHelper.get_language_tag + "name").html_safe %></label>
+    <label for="name"><%= ContactUsHelper.send(ApplicationHelper.get_language_tag + "name").html_safe %>*</label>
+    <br>
+    <span class=<%="taxes-warning" + if !@name_warning then " hidden" else "" end%>>
+        please fill out your name
+    </span>
     <input type="text" name='name' class="form-control" id="name">
   </div>
 
   <div class="form-group">
-    <label for="phone"><%= ContactUsHelper.send(ApplicationHelper.get_language_tag + "phone").html_safe %></label>
+    <label for="email"><%= ContactUsHelper.send(ApplicationHelper.get_language_tag + "email_address").html_safe %>**</label>
+    <br>
+        <span class=<%="taxes-warning" + if !@email_warning then " hidden" else "" end%>>
+        please fill out either your email or your phone number
+    </span>
+    <input type="email" name='email' class="form-control" id="email">
+  </div>
+
+
+
+  <div class="form-group">
+    <label for="phone"><%= ContactUsHelper.send(ApplicationHelper.get_language_tag + "phone").html_safe %>**</label>
+    <br>
+        <span class=<%="taxes-warning" + if !@phone_warning then " hidden" else "" end%>>
+        please fill out either your email or your phone number
+    </span>
     <input type="text" class="form-control"  name='phone' id="phone">
   </div>
 
@@ -32,10 +47,20 @@
 
 
   <div class="form-group">
-    <label for="question"><%= ContactUsHelper.send(ApplicationHelper.get_language_tag + "question").html_safe %></label>
+    <label for="question"><%= ContactUsHelper.send(ApplicationHelper.get_language_tag + "question").html_safe %>*</label>
+    <br>
+        <span class=<%="taxes-warning" + if !@question_warning then " hidden" else "" end%>>
+        please give a reason for contacting us
+    </span>
     <textarea name='question' class="form-control" rows="5" id="comment"></textarea>
   </div>
 
   <button type="submit" class="btn btn-default"><%= ContactUsHelper.send(ApplicationHelper.get_language_tag + "submit").html_safe %></button>
 </form>
+<br>
 
+<p>
+  * indicates that this field is required
+  <br>
+  ** please make sure you fill out either your phone number or your email address so we can contact you
+</p>
