--- a/app/views/example_mailer/sample_email.text.erb
+++ b/app/views/example_mailer/sample_email.text.erb
@@ -4,11 +4,22 @@ Hi, this is a contact form!
 Name:
 <%= @name%>
 
+
 Email:
 <%= @email%>
 
+
 Phone:
 <%= @phone%>
+
+
+Language Preference:
+<%= @prefer_spanish%>
+
+
+Contact Preference:
+<%= @contact_option%>
+
 
 Question:
 <%= @question%>
