a few link changes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -194,7 +194,12 @@
             <hr>
 
 <footer class="taxes-centered-image taxes-centered">
-  &copyAll Copyrights Reserved.
+  &copyCopyrights.  All Rights Reserved by 48th Street Income Tax Service.
+  <br>
+  <br>
+  109 South Main Street
+  <br>
+  Denison, IA
 </footer>
 </div>
 </body>
