pictures on side

--- a/app/views/employee_application/_application_form.html.erb
+++ b/app/views/employee_application/_application_form.html.erb
@@ -1,5 +1,5 @@
 
-<form role="form">
+<form accept-charset="UTF-8" action="/employee_application_submit" method="post" role="form">
   <div class="form-group">
     <label for="text">First Name</label>
     <input type="email" class="form-control" id="email">
