--- a/app/views/example_mailer/employment_email.html.erb
+++ b/app/views/example_mailer/employment_email.html.erb
@@ -4,7 +4,42 @@
   <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
 </head>
 <body>
-<h3>Hi, this is an employment form! </h3>
+<h3>Hi, this is an employee application </h3>
+
+<p>
+Name:
+  <br>
+<%= @name%>
+<br>
+<br>
+
+Email:
+<%= @email%>
+  <br>
+  <br>
+
+Phone:
+  <br>
+<%= @phone%>
+  <br>
+  <br>
+
+Language Preference:
+  <br>
+<%= @prefer_spanish%>
+  <br>
+  <br>
+
+Contact Preference:
+  <br>
+<%= @contact_option%>
+  <br>
+  <br>
+
+Info:
+  <br>
+<%= @info%>
+</p>
 
 </body>
 </html>
