--- a/app/views/example_mailer/employment_email.text.erb
+++ b/app/views/example_mailer/employment_email.text.erb
@@ -1,2 +1,25 @@
 
-Hi, this is an employmnet form!
+Hi, this is an employee application!
+
+Name:
+<%= @name%>
+
+
+Email:
+<%= @email%>
+
+
+Phone:
+<%= @phone%>
+
+
+Language Preference:
+<%= @prefer_spanish%>
+
+
+Contact Preference:
+<%= @contact_option%>
+
+
+Info:
+<%= @info%>
