--- a/app/views/employee_application/_application_form.html.erb
+++ b/app/views/employee_application/_application_form.html.erb
@@ -9,8 +9,61 @@
     </span>
   <input type="text" name='name' class="form-control" id="name">
 </div>
-    <%= file_field_tag 'file' %>
+
+
+<div class="form-group">
+  <label for="email"><%= ContactUsHelper.send(ApplicationHelper.get_language_tag + "email_address").html_safe %>**</label>
+  <br>
+    <span class=<%="taxes-warning" + if !@email_warning then " hidden" else "" end%>>
+        <%= ContactUsHelper.send(ApplicationHelper.get_language_tag + "email_address_warning").html_safe %>
+    </span>
+  <input type="email" name='email' class="form-control" id="email">
+</div>
+
+<div class="form-group">
+  <label for="phone"><%= ContactUsHelper.send(ApplicationHelper.get_language_tag + "phone").html_safe %>**</label>
+  <br>
+    <span class=<%="taxes-warning" + if !@phone_warning then " hidden" else "" end%>>
+        <%= ContactUsHelper.send(ApplicationHelper.get_language_tag + "phone_warning").html_safe %>
+    </span>
+  <input type="text" class="form-control"  name='phone' id="phone">
+</div>
+
+<div class="form-group">
+  <label for="sel1"><%= ContactUsHelper.send(ApplicationHelper.get_language_tag + "form_of_contact").html_safe %></label>
+  <select class="form-control" name='contact_option' id="sel1">
+
+    <option value="1"><%= ContactUsHelper.send(ApplicationHelper.get_language_tag + "email_option") %></option>
+    <option value="2"><%= ContactUsHelper.send(ApplicationHelper.get_language_tag + "phone_option") %></option>
+    <option value="3"><%= ContactUsHelper.send(ApplicationHelper.get_language_tag + "email_or_phone_option") %></option>
+  </select>
+</div>
+
+<div class="checkbox">
+  <label><input name='prefer_spanish' type="checkbox"><%= ContactUsHelper.send(ApplicationHelper.get_language_tag + "prefer_spanish").html_safe %></label>
+</div>
+
+<div class="form-group">
+  <label for="info">Please write a little bit about yourself*</label>
+  <br>
+    <span class=<%="taxes-warning" + if !@question_warning then " hidden" else "" end%>>
+        <%= ContactUsHelper.send(ApplicationHelper.get_language_tag + "question_warning").html_safe %>
+    </span>
+  <textarea name='info' class="form-control" rows="5" id="comment"></textarea>
+</div>
+
+<div class="form-group">
+  <label>Upload Resume:</label>
+<%= file_field_tag 'file' %>
+</div>
 <br>
-<%= submit_tag nil, class: 'btn btn-default' %>
+<%= submit_tag 'Submit', class: 'btn btn-default' %>
 <% end %>
 <br>
+
+
+<p>
+  *<%= ContactUsHelper.send(ApplicationHelper.get_language_tag + "asterisk1").html_safe %>
+  <br>
+  **<%= ContactUsHelper.send(ApplicationHelper.get_language_tag + "asterisk2").html_safe %>
+</p>
