fixed little things

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -153,6 +153,22 @@
   color: #E61616;
 }
 
+.taxes-nav-list li{
+  padding-right: 10px;
+}
+
+.taxes-slightly-smaller{
+  font-size: .88em;
+}
+
+.taxes-picture-caption{
+
+}
+
+.taxes-picture-caption-title{
+  font-weight: bolder;
+}
+
 li.even{
   color: rgb(80,50,120);
 }
