--- a/app/views/employee_application/employee_application.html.erb
+++ b/app/views/employee_application/employee_application.html.erb
@@ -1,6 +1,7 @@
 <h3 class="taxes-centered">Employee Application</h3>
 
-<p>Apply to join our team of professionals serving Denison and surrounding
-areas.</p>
+<p>
+<%=EmployeeApplicationHelper.send(ApplicationHelper.get_language_tag + "employee_application_para").html_safe %>
+</p>
 
 <%= render 'application_form' %>
