--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -141,7 +141,11 @@
                 <br>
                 <br>
 
-
+                <div class=" taxes-centered">
+                  <a href="https://cisc.sbtpg.com/taxpayers/refund_transfer.aspx">
+                    <img src= <%= "assets/" + ApplicationHelper.get_language_tag + "tpg_poster.jpg" %> class="img-rounded img-responsive taxes-centered-image">
+                  </a>
+                </div>
 
                 <br>
                 <hr class="hidden-lg">
