--- a/app/views/sidebar/_sidebar.html.erb
+++ b/app/views/sidebar/_sidebar.html.erb
@@ -1,6 +1,6 @@
 <div class="taxes-sidebar">
 
-<div class="sidebar-module@">
+<div class="sidebar-module sidebar-module-inset">
 
       <%= SidebarHelper.send(ApplicationHelper.get_language_tag + "contact_us").html_safe %>
 
@@ -9,8 +9,8 @@
 
 <div class=" sidebar-module taxes-centered">
   <a href="https://cisc.sbtpg.com/taxpayers/refund_transfer.aspx">
-    <img src= <%= "assets/" + ApplicationHelper.get_language_tag + "tpg_poster.jpg" %> class="img-rounded img-responsive taxes-centered-image">
-  </a>
+  <img src= <%= "assets/" + ApplicationHelper.get_language_tag + "tpg_poster.jpg" %> class="img-rounded img-responsive taxes-centered-image">
+</a>
 </div>
 
   <div class="sidebar-module">
