--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -130,6 +130,7 @@
                 <br>
                 <br>
                 <br>
+                <a class="taxes-centered taxes-centered-image" href="https://fileonline.1040.com/default.aspx?did=245546" target="_blank"><img src="http://prep.1040.com/Images/UserUploads/-1/SkyscraperBanner.jpg" border="0"></a>
 
               </div>
 
