--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -106,6 +106,11 @@
   margin-right: auto;
 }
 
+.taxes-centered-image img{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
 
 
 
