--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -61,6 +61,8 @@
             <li> <%= link_to(ApplicationHelper.send(ApplicationHelper.get_language_tag + "questions_and_answers").html_safe,'/questions_and_answers', :method => 'get') %></li>
             <li> <%= link_to(ApplicationHelper.send(ApplicationHelper.get_language_tag + "privacy").html_safe,'/privacy',:method => 'get') %></li>
             <li> <%= link_to(ApplicationHelper.send(ApplicationHelper.get_language_tag + "same_sex_marriage").html_safe, '/same_sex_marriage', :method => 'get') %></li>
+            <li> <%= link_to(ApplicationHelper.send(ApplicationHelper.get_language_tag + "photo_gallery").html_safe, '/photo_gallery', :method => 'get') %></li>
+
           </ul>
         </li>
 
