removed better business bureau things

--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -2,7 +2,7 @@
 <%= render 'misc/welcome' %>
 
 <div class="">
-  <img src="/assets/team.jpg" class="img-rounded img-responsive taxes-centered-image">
+  <img src="/assets/team_changed.jpg" class="img-rounded img-responsive taxes-centered-image">
 </div>
 
 <hr>
